<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:orientation="vertical"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:indeterminateTint="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/oneItemProgressBar"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/retryButton"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:text="@string/retry"
            android:visibility="invisible"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/failMessage"/>
    <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/lowerCard"
            app:layout_constraintTop_toBottomOf="@+id/upperCard"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintVertical_weight="4"
            android:visibility="invisible"
            android:layout_marginTop="8dp">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:text="@string/no_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/no_photo_message"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/payloads"
                    android:visibility="invisible"/>
            <ImageView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:srcCompat="@android:drawable/alert_light_frame"
                    android:id="@+id/rocketPhoto"
                    android:transitionName="photo"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/payloads"
                    android:contentDescription="@string/photo_desc"
                    android:visibility="invisible"/>
            <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@android:drawable/ic_menu_search"
                    android:id="@+id/magnifier"
                    app:layout_constraintBottom_toBottomOf="@+id/rocketPhoto"
                    app:layout_constraintTop_toTopOf="@+id/rocketPhoto"
                    app:layout_constraintEnd_toEndOf="@+id/rocketPhoto"
                    app:layout_constraintStart_toStartOf="@+id/rocketPhoto"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintVertical_bias="0.0"
                    android:visibility="invisible"
                    tools:ignore="ContentDescription"/>
            <TextView
                    android:gravity="start"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/payloads"
                    android:text="@string/payloads_text"
                    android:background="@android:color/background_light"
                    app:layout_constraintTop_toBottomOf="@+id/block"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
            />
            <TextView
                    android:gravity="start"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/block"
                    android:text="@string/block_text"
                    android:background="@android:color/background_light"
                    app:layout_constraintTop_toBottomOf="@+id/second_stage"
                    app:layout_constraintBottom_toTopOf="@+id/payloads"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"/>
            <TextView
                    android:textStyle="bold"
                    android:gravity="start"
                    android:text="@string/second_stage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/second_stage"
                    android:textSize="16sp"
                    android:background="@android:color/background_light"
                    app:layout_constraintTop_toBottomOf="@+id/cores"
                    app:layout_constraintBottom_toTopOf="@+id/block"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"/>
            <TextView
                    android:textStyle="bold"
                    android:gravity="start"
                    android:text="@string/first_stage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/first_stage"
                    android:textSize="16sp"
                    android:background="@android:color/background_light"
                    app:layout_constraintTop_toBottomOf="@+id/rocket_type"
                    app:layout_constraintBottom_toTopOf="@+id/cores"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"/>
            <TextView
                    android:gravity="start"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/cores"
                    android:text="@string/cores_text"
                    android:background="@android:color/background_light"
                    app:layout_constraintTop_toBottomOf="@+id/first_stage"
                    app:layout_constraintBottom_toTopOf="@+id/second_stage"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"/>
            <TextView
                    android:gravity="start"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/rocket_type"
                    android:text="@string/rocket_type_text"
                    android:background="@android:color/background_light"
                    app:layout_constraintBottom_toTopOf="@+id/first_stage"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/rocket_name"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"/>
            <TextView
                    android:gravity="start"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/rocket_name"
                    android:text="@string/rocket_name_text"
                    android:background="@android:color/background_light"
                    app:layout_constraintTop_toBottomOf="@+id/rocket"
                    app:layout_constraintBottom_toTopOf="@+id/rocket_type"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"/>
            <TextView
                    android:textStyle="bold"
                    android:gravity="start"
                    android:text="@string/rocket"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/rocket"
                    android:textSize="16sp"
                    android:background="@android:color/background_light"
                    android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/rocket_name"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginBottom="8dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/upperCard"
            app:layout_constraintBottom_toTopOf="@+id/lowerCard"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_weight="1"
            android:visibility="invisible"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:textStyle="bold"
                    android:gravity="center_horizontal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/mission_name"
                    android:text="@string/mission_name_text"
                    android:background="@android:color/background_light"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/flight_number"
                    android:layout_marginTop="8dp"
                    android:textSize="16sp"/>
            <TextView
                    android:gravity="start"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/flight_number"
                    android:text="@string/flight_number_text"
                    android:background="@android:color/background_light"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toStartOf="@+id/launch_year"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mission_name"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"/>
            <TextView
                    android:gravity="end"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/launch_year"
                    android:text="@string/launch_year_text"
                    android:background="@android:color/background_light"
                    app:layout_constraintStart_toEndOf="@+id/flight_number"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBaseline_toBaselineOf="@+id/flight_number"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <TextView
            android:text="@string/fail_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/failMessage"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:visibility="invisible"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/retryButton"/>
</androidx.constraintlayout.widget.ConstraintLayout>